# fleshrag

./: .env  .env.example  .gitignore  ACTUAL_BACKLOG_2026-04-24.md  BULK_DELETE_VERIFICATION_REPORT.md  CIRCUIT_BREAKER_REPORT.md  IDEMPOTENT_INDEXING_REPORT.md  INDEX_VERSIONING_REPORT.md  KODA.md  LATER_TASKS_REPORT_10-14.md  PLAYWRIGHT_TEST_REPORT_2026-04-27.md  README.md  RUNTIME_STATE_SEPARATION_REPORT.md  SESSION_FINAL_REPORT.md  SQLITE_HARDENING_REPORT.md  TEST_REPORT_2026-04-24.md  TZ_Multimodal_RAG.md  TZ_Multimodal_RAG_v2.1.md  TZ_Multimodal_RAG_v2.2.md  TZ_Multimodal_RAG_v2.3.md  UX_FIXES_COMPLETED_2026-04-27.md  UX_HEURISTIC_AUDIT_REPORT_2026-04-27.md  docker-compose.yml  multilingual-e5-large.txt  ndhub_doc.md  package-lock.json  playwright.config.js  test-frontend.spec.js
backend/: Dockerfile  cleanup_excluded_files.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: admin.py  conversations.py  export.py  files.py  index.py  models.py  search.py  settings.py
backend/app/cache/: artifacts.py
backend/app/db/: crud.py  models.py
backend/app/gpu/: policy.py
backend/app/indexer/: bm25.py  chunker.py  embedder.py  watchdog_service.py  watcher.py
backend/app/models/: __init__.py  (+3 more)
backend/tests/: conftest.py  test_artifact_cache.py  test_circuit_breaker.py  test_critical1_runtime.py  test_gpu_policy.py  test_idempotent_indexing.py  test_index_versioning.py  test_integration.py  test_retry_policies.py  test_runtime_state.py  test_runtime_status_contract.py  test_settings_admin_contract.py  test_smoke.py  test_sqlite_hardening.py
(+58 files in other folders)
